# .vscode

./: execution_results_with_evidence.json  extraction_results_with_evidence.json  main.py  pnpm-lock.yaml  test-mongo.js
backend/agent/: __init__.py  base_agent.py  execution_agent.py  financial_agent.py  identity_agent.py  legal_agent.py  orchestrator.py  test_vectorstore.py  volume_agent.py
backend/agent/archives1/: base_agent1.py  financial_agent1.py  financial_agent4.py  identity_agent1.py  identity_agent2.py  identity_agent22.py  identity_agent3.py  identity_agent4.py  identity_agent_arch.py  legal_agent1.py  legal_agent5.py  operational_agent1.py  operational_agent6.py  test_identity_agent.py  timeline_agent1.py  timeline_agent7.py  volume_agent3.py
backend/orchestrator/: main.py  pyproject.toml  test_mongo_simple.py
backend/utils/: __init__.py  enhanced_chunker.py  enhanced_retrieval.py  report_generator.py  vectorize_documents.py  vectorstore.py
backend/utils/arch0/: enhanced_chunker1.py  enhanced_retrieval1.py  vectorize_documents1.py  vectorstore1.py
data/cache/execution_agent/: embeddings_cache.pkl
data/cache/identity_agent/: embeddings_cache.pkl
data/intelligent_store/: cache.json  faiss.index  metadata.pkl
models/: Agent.js
output_test/: test_output_identity1.json  test_output_identity2.json
react-app/: middleware.ts  package.json  pnpm-lock.yaml  tsconfig.json
react-app/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
react-app/components/agents/: AgentCard.tsx
react-app/components/analysis/: AgentStatus.tsx  (+1 more)
src/: database.js
(+18 files in other folders)
